# simplebeam

./: .gitignore  .pre-commit-config.yaml  .pypirc  LICENSE  README.md  noxfile.py  pyproject.toml  tox.ini
simplebeam/: __init__.py  beam.py  exceptions.py  loads.py  restraints.py
tests/: test.py  test_basic.py  test_beam.py  test_loads.py  test_simply_supported.py  test_ux.py
