[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simplebeam"
authors = [{name = "Sean Kane", email = "mail@ifitsmoving.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = ["sympy"]

[project.urls]
Home = "https://github.com/skane88/simplebeam"
