[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simplebeam"
authors = [{name = "Sean Kane", email = "mail@ifitsmoving.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = ["sympy", "numpy", "matplotlib"]

[project.urls]
Home = "https://github.com/skane88/simplebeam"


[tool.isort]
profile = "black"

[tool.ruff]
select = ["A", "E", "F", "W", "B", "SIM", "C4", "I"]
line-length = 88
ignore = ["F401", "E741"]